[Main] - Local Plugins 🧐